Updated bulk_upload.js
